envoy/v2/envoy.json
{
    "listeners": [
      {
        "address": "tcp://0.0.0.0:80",
        "filters": [
          {
            "type": "read",
            "name": "http_connection_manager",
            "config": {
              "codec_type": "auto",
              "stat_prefix": "ingress_http",
              "generate_request_id": true,
              "tracing": {
                "operation_name": "egress"
              },
              "route_config": {
                "virtual_hosts": [
                  {
                    "name": "service",
                    "domains": ["*"],
                    "routes": [
                      {
                        "timeout_ms": 30000,
                        "prefix": "/api",
                        "cluster": "local_service",
                        "retry_policy": {
                            "retry_on": "5xx",
                            "num_retries": 3
                        }
                      }
                    ]
                  }
                ]
              },
              "filters": [
                {
                  "type": "decoder",
                  "name": "router",
                  "config": {}
                }
              ]
            }
          }
        ]
      }
    ],
    "tracing": {
      "http": {
        "driver": {
          "type": "zipkin", 
          "config": {
            "collector_cluster": "jaeger",
            "collector_endpoint": "/api/v1/spans"
          }
        }
      }
    }, 
    "admin": {
      "access_log_path": "/tmp/envoy-access-log",
      "address": "tcp://0.0.0.0:8001"
    },
    "cluster_manager": {
      "clusters": [
        {
          "name": "local_service",
          "connect_timeout_ms": 250,
          "type": "static",
          "lb_type": "round_robin",
          "hosts": [
            {
              "url": "tcp://127.0.0.1:3000"
            }
          ]
        },
        {
            "name": "jaeger",
            "connect_timeout_ms": 1000,
            "type": "strict_dns",
            "lb_type": "round_robin",
            "hosts": [
              {
                "url": "tcp://docker.for.mac.localhost:9411"
              }
            ]
          }
      ]
    }
  }
